# vhs-decode-dotnet

./: .gitattributes  .gitignore  Directory.Build.props  README.ja.md  README.md  README.zh-CN.md  THIRD-PARTY-NOTICES.md  VHSDecodeDotNet.slnx  global.json
.github/workflows/: cuda-sidecar.yml  release-build.yml
docs/: COMPATIBILITY_EVIDENCE.md  CUDA.md
eng/cuda/: Build-CudaPackage.ps1  Compare-CudaDecode.ps1  Test-CudaPackage.ps1
eng/cuda/tests/: Fake-CudaQualificationDecoder.ps1  Test-CompareCudaDecode.ps1
native/cuda/: CMakeLists.txt  README.md  THIRD-PARTY-NOTICES-CUDA.md
native/cuda/include/: vhsdecode_cuda.h
native/cuda/src/: vhsdecode_cuda.cu
native/cuda/tests/: smoke.cpp
src/VHSDecode.Cli/: Program.cs  VHSDecode.Cli.csproj
src/VHSDecode.Core/: AssemblyInfo.cs  VHSDecode.Core.csproj
src/VHSDecode.Core/CommandLine/: CliSpecs.cs  CommandHelpFormatter.cs  CommandLineParseException.cs  CommandLineParser.cs  DecodeCommandSpec.cs  DecodeDispatcher.cs  FrequencyParser.cs  Ire0AdjustParser.cs  OptionArity.cs  OptionSpec.cs  OptionValueKind.cs  ParsedCommand.cs  ParsedOptionSource.cs  PythonFileTypeValidator.cs  PythonNamespaceFormatter.cs  PythonNumericParser.cs  PythonStringSemantics.cs  UpstreamIoArgumentValidator.cs  VideoSystemSelector.cs
src/VHSDecode.Core/Decode/: CudaBackendContracts.cs  CudaBackendProbe.cs  CudaNativeInterop.cs  CudaRfBlockComputeBackend.cs  CudaRfPipelineDescriptor.cs  DecodeFieldReadException.cs  DecodeOutputFile.cs  DecodeOutputPreflight.cs  DecodeReadWindowPlanner.cs  DecodeRunBounds.cs  DecodeRunner.cs  DecodeRuntimeReporter.cs  DecodeSession.cs  DecodeSessionLogWriter.cs  DecodeVersionInfo.cs  GnuRadioRfAfeBridge.cs  IRfBlockComputeBackend.cs  LaserDiscAc3Filter.cs  LaserDiscAc3Pipe.cs  LaserDiscAnalogAudioPhase2.cs  LaserDiscAnalogAudioTiming.cs  LaserDiscAutoMtfController.cs  LaserDiscEfmOutputWriter.cs  LaserDiscVbiInterpreter.cs  LdTestLdfWriter.cs  RfBlockDecodePipeline.cs  RfBlockStreamDecoder.cs  RfComputeBackendSelector.cs  TbcDropoutMapping.cs  TbcFieldDecodePipeline.cs  TbcFieldDecodeRecoveryException.cs  TbcFieldOrderPlanner.cs  TbcFieldSequenceDecodeEngine.cs  TbcFirstFieldDecodeEngine.cs  TbcOutputMetadataWriter.cs  TbcSqliteMetadataWriter.cs  VhsChromaDecoder.cs  VhsDiskSpaceGuard.cs  VhsInitializationDiagnostics.cs  VhsParamsFileOverride.cs  (+1 more)
src/VHSDecode.Core/Dsp/: AnalyticSignal.cs  ChromaTrapFilter.cs  CvbsPulseDetector.cs  CvbsSyncLevelDetector.cs  DecodeDelayEstimator.cs  DecodeFilterSet.cs  IirFilter.cs  (+30 more)
src/VHSDecode.Ipp.Native/: VHSDecode.Ipp.Native.vcxproj
tests/VHSDecode.Tests/: ChromaReductionNumericsCompatibilityTests.cs  CommandLineComputeBackendTests.cs  CommandLineDspBackendTests.cs  CommandLineFileTypeCompatibilityTests.cs  CommandLineLargeIntegerRuntimeCompatibilityTests.cs  CommandLineNumericCompatibilityTests.cs  CommandLineOptionalValueCompatibilityTests.cs  CompatibilityTests.cs  CudaBackendProbeTests.cs  CudaRfBlockComputeBackendTests.cs  CudaRfDifferentialTests.cs  CvbsFieldStateCompatibilityTests.cs  DecodeMetadataCompatibilityTests.cs  DecodeOutputSharingCompatibilityTests.cs  DecodeStartPositionCompatibilityTests.cs  DirectVideoPlayerSkipWarningCompatibilityTests.cs  DspWorkingBufferTests.cs  FallbackVSyncDiagnosticCompatibilityTests.cs  FallbackVSyncNumericsCompatibilityTests.cs  FfmpegStreamSampleLoaderTests.cs  HiFiCompatibilityTests.cs  HiFiPostProcessorTests.cs  HiFiRunnerTests.cs  HiFiSpectralNoiseReductionTests.cs  LaserDiscAc3PipelineTests.cs  LaserDiscAgcMedianNumericsCompatibilityTests.cs  LaserDiscAnalogAudioWriteStateCompatibilityTests.cs  LaserDiscAudioNumericsCompatibilityTests.cs  LaserDiscAutoMtfNumericsCompatibilityTests.cs  LaserDiscBurstReductionNumericsCompatibilityTests.cs  LaserDiscDropoutNumericsCompatibilityTests.cs  LaserDiscFieldsWrittenTimingCompatibilityTests.cs  LaserDiscNtscVitsNumericsCompatibilityTests.cs  LaserDiscOutputLifecycleCompatibilityTests.cs  LaserDiscPercentileNumericsCompatibilityTests.cs  LaserDiscPilotNumericsCompatibilityTests.cs  LaserDiscPlayerSkipMedianNumericsCompatibilityTests.cs  LaserDiscRecoveryStateCompatibilityTests.cs  LaserDiscRfMetricNumericsCompatibilityTests.cs  LaserDiscSeekRecoveryCompatibilityTests.cs  (+31 more)
tools/: benchmark-ipp.ps1  build-ipp-native.ps1  generate_format_snapshot.py
(+80 files in other folders)
